<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuactivity">

    <ImageView
        android:id="@+id/bnr_img"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/banner"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:text="@string/welcome_to_delicious_pizza"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_marginEnd="10dp"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:id="@+id/menu_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="40sp"
        android:textColor="@color/brown"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bnr_img"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <CheckBox
        android:id="@+id/chk1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/margarita_199"
        android:layout_below="@+id/menu_txt"
        android:layout_centerHorizontal="true"
        android:textColor="@color/brown"
        android:textSize="15sp"
        android:padding="10dp"
        />
    <CheckBox
        android:id="@+id/chk2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/italian_249"
        android:layout_below="@+id/chk1"
        android:textColor="@color/brown"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:padding="10dp"
        />
    <CheckBox
        android:id="@+id/chk3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sweet_corn_299"
        android:layout_below="@+id/chk2"
        android:textColor="@color/brown"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:padding="10dp"
        />
    <CheckBox
        android:id="@+id/chk4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/garlic_bread_149"
        android:layout_below="@+id/chk3"
        android:textColor="@color/brown"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/bill"
        android:backgroundTint="@color/yellow"
        android:layout_below="@+id/chk4"
        android:layout_marginTop="10dp"
        />


</RelativeLayout>