<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:id="@+id/bnr_img"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/banner"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:text="@string/welcome_to_delicious_pizza"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_marginEnd="10dp"
        android:layout_alignParentRight="true"
        />

    <EditText
        android:id="@+id/mn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobile_no"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:inputType="number"
        android:textColor="@color/brown"
        android:layout_below="@+id/welcome_txt"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="@color/brown"
        android:inputType="textPassword"
        android:layout_below="@+id/mn"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />
    <CheckBox
        android:id="@+id/show_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:layout_below="@id/pass"
        android:textColor="@color/brown"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_pass"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        />

</RelativeLayout>