<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".display_bill">

    <ImageView
        android:id="@+id/bnr_img"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/banner"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/thanks"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:text="@string/thank_you_for_order"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/bill_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill"
        android:textSize="40sp"
        android:layout_below="@+id/bnr_img"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/brown"
        />
    <TextView
        android:id="@+id/dis_bill"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/bill_txt"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="@color/brown"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dis_bill"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        >

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_weight="1"
        android:backgroundTint="@color/yellow"
        android:layout_marginEnd="5dp"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/ordr_agn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_again"
        android:layout_weight="1"
        android:layout_marginEnd="5dp"

        android:backgroundTint="@color/yellow"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/total_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bill"
        android:layout_weight="1"
        android:backgroundTint="@color/yellow"
        tools:ignore="ButtonStyle" />
    </LinearLayout>


</RelativeLayout>